--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: shinysecure
 Type: Package
-Title: What the Package Does (Title Case)
+Title: encrypts shiny app
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Abednego Nasila
+Maintainer: Abednego Nasila <alisanabednego@gmail.com>
+Description: This package enables authors to encrypt shiny app.
+License: MIT Licence
 Encoding: UTF-8
 LazyData: true
+Imports: dplyr, shiny, shinyjs
