--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,7 @@
 exportPattern("^[[:alpha:]]+")
+import(bslib)
+import(dashboardthemes)
 import(dplyr)
 import(shiny)
-inport(shinyjs)
+import(shinyjs)
+
